<!--
  ~  Copyright 2020 Anastasia Annin
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~ http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  ~
-->

<resources>
    <string name="app_name">London Tube and Overground Schedule</string>
    <string name="tube_list_instructions">Click on a line to view a list of stations.</string>
    <string name="tube_autocomplete_instr">Enter Station Name to View Schedule</string>
    <string name="station_list_instructions">Click on a station to view train schedules.</string>
    <string name="line_name_label">Line name:</string>
    <string name="line_name">Bakerloo</string>
    <string name="station_name">Canary Wharf</string>
    <string name="favorites_added">Line added to favorites</string>
    <string name="most_frequented_lines">Most Frequented Lines</string>
    <string name="line_list_menu">Line List</string>
    <string name="action_share">Send arrival time</string>
    <string name="empty_view">Empty view</string>
    <string name="empty_view_toast">Data currently unavailable</string>
    <string name="empty_view_text">Data currently unavailable</string>
    <string name="name_label">Station Name:</string>
    <string name="arrival_label">Next train:</string>
    <string name="destination_label">Terminal Station:</string>
    <string name="location_label">Current Location:</string>
    <string name="towards_label">Towards:</string>
    <string name="platform_label">Platform:</string>
    <string name="platform_text">Eastbound - Platform 2</string>
    <string name="snackbar_internet">Please check your internet connection</string>
    <string name="snackbar_retry">Retry</string>
    <string name="arrival_text">5:45 p.m. Jan 2, 2018</string>
    <string name="destination_text">Brixton Underground Station</string>
    <string name="location_text">Between Highbury and Islington and Kings Cross St. P</string>
    <string name="towards_text">High Barnet via CX</string>
    <string name="station_dup_instructions">Duplicate station names indicate different line branches.</string>
    <string name="station_dup_instructions_two">Terminus station displayed on the next page.</string>
    <string name="station_dup_instr_branch">Ealing Broadway branch stations displayed at the bottom.</string>
    <string name="add_to_favourites">Add to the Most Frequented Lines</string>
    <string name="line_status_text">Good Service</string>
    <string name="line_reason_text">Drivers temporarily unavailable</string>
    <string name="favorites_button_text_add">Add to the Most Frequented Lines</string>
    <string name="favorites_button_text_remove">Remove from the Most Frequented Lines</string>
    <string name="favorites_removed">Line removed from the Most Frequented Lines</string>
    <string name="button_map_text">View on Google Maps</string>
    <string name="button_map_fab_text">View on Google Maps</string>
    <string name="station_list">Stations</string>
    <string name="station_schedule">Tube Train Schedule</string>
    <string name="station_map">London Tube and Overground Map</string>
    <string name="settings_menu_main">About</string>
    <string name="settings_label_manifest">About</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="privacy_policy_label_manifest">Privacy Policy</string>
    <string name="privacy_policy_settings">Privacy Policy</string>
    <string name="open_source_licenses_settings">Open Source Licenses</string>
    <string name="open_source_licenses">Open Source Licenses</string>
    <string name="bakerloo_branch_case"><![CDATA[Stations displayed in sequence between Harrow & Wealdstone and Elephant & Castle.]]></string>
    <string name="central_branch_case">\Stations displayed in sequence as follows: Epping to West Ruislip; Hainault Loop branch below West Ruislip from Hainault to Wanstead and Grange Hill to Roding Valley; Ealing Broadway branch below Roding Valley. </string>
    <string name="circle_branch_case">Stations displayed in sequence as follows: Edgware Road to Paddington; Hammersmith branch below Paddington between Royal Oak and Hammersmith.</string>
    <string name="district_branch_case">Stations displayed in sequence as follows: Upminster to Ealing Broadway; Richmond branch below Ealing Broadway; Wimbledon branch below Richmond between West Brompton and Wimbledon; Edgware Road below Wimbledon between Edgware and High Street Kensington. Last displayed: Kensington Olympia below High Street Kensington.</string>
    <string name="hammer_branch_case">Stations displayed in sequence between Barking and Hammersmith.</string>
    <string name="jubilee_branch_case">Stations displayed in sequence between Stratford and Stanmore.</string>
    <string name="metro_branch_case">Stations displayed in sequence as follows: Aldgate to Amersham and Chesham; Uxbridge branch below Chesham between West Harrow and Uxbridge; Watford branch below Uxbridge.</string>
    <string name="northern_branch_case">Stations displayed in sequence as follows: High Barnet to Morden via Bank branch (not incl. Mornington Crescent); Charing Cross branch below Morden between Mornington and Waterloo; Edgware branch below Waterloo between Edgware and Chalk Farm; Mill Hill East below Chalk Farm.</string>
    <string name="picca_branch_case">\Stations displayed in sequence as follows: Cockfosters to Uxbridge; Heathrow branch below Uxbridge between South Ealing and Heathrow Terminal 5. </string>
    <string name="victoria_branch_case">Stations displayed in sequence between Walthamstow Central and Brixton.</string>
    <string name="waterloo_branch_case">Stations displayed in sequence between Bank and Waterloo.</string>
    <string name="play_services_unavailable">Google Play Services is currently unavailable. Map unable to load</string>
    <string name="line_guide_manifest">Line Guide</string>
    <string name="line_color_instr">Line names displayed in their respective colors.</string>
    <string name="refresh_schedule">Refresh Schedule</string>
    <string name="line_guide_activity">Line Guide</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- Strings used for fragments for navigation -->
    <!-- Category name for tube lines [CHAR LIMIT=20] -->
    <string name="category_tube_line">Tube lines</string>

    <!-- Category name for the London overground [CHAR LIMIT=20] -->
    <string name="category_overground">London Overground</string>
    <string name="overground_list">Overground Status</string>
    <string name="map_icon_main">Map icon</string>
    <string name="frag_over_instr">Click on text to view a list of stations.</string>
    <string name="over_stat_activity">Overground Stations</string>
    <string name="over_stat_schedule">Overground Train Schedule</string>
    <string name="line_over_name">London Overground</string>
    <string name="over_status_text">Reduced Service</string>
    <string name="over_reason_text">LONDON OVERGROUND: Until</string>
    <string name="over_stat_alph_order">Stations listed in alphabetical order.</string>
    <string name="tube_list_instr_or">Or</string>

</resources>
