<?xml version="1.0" encoding="utf-8"?>
<!--
  ~  Copyright 2020 Anastasia Annin
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~ http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  ~
-->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:id="@+id/schedule_widget_list">

    <TextView
        android:id="@+id/schedule_widget_name_label"
        style="@style/ScheduleWidgetLabelStyle"
        android:layout_marginStart="@dimen/line_station_margin_start"
        android:layout_marginEnd="@dimen/line_station_margin_end"
        android:text="@string/name_label"
        />

    <TextView
        android:id="@+id/schedule_widget_station_name"
        style="@style/ScheduleWidgetNameStyle"
        android:layout_marginStart="@dimen/line_station_margin_start"
        android:layout_marginEnd="@dimen/line_station_margin_end"
        android:padding="@dimen/widget_list_pad"
        tools:text="@string/station_name"
        />

    <TextView
        android:id="@+id/schedule_widget_arrival_label"
        style="@style/ScheduleWidgetLabelStyle"
        android:layout_marginStart="@dimen/line_station_margin_start"
        android:layout_marginEnd="@dimen/line_station_margin_end"
        android:layout_marginTop="@dimen/sch_widget_top_padding"
        android:text="@string/arrival_label"/>

    <TextView
        android:id="@+id/schedule_widget_arrival"
        style="@style/ScheduleWidgetNameStyle"
        android:layout_marginStart="@dimen/line_station_margin_start"
        android:layout_marginEnd="@dimen/line_station_margin_end"
        android:padding="@dimen/widget_list_pad"
        tools:text="@string/arrival_text" />

    <TextView
        android:id="@+id/schedule_widget_towards_label"
        style="@style/ScheduleLabelStyle"
        android:layout_marginStart="@dimen/line_station_margin_start"
        android:layout_marginEnd="@dimen/line_station_margin_end"
        android:text="@string/towards_label"/>

    <TextView
        android:id="@+id/schedule_widget_towards"
        style="@style/ScheduleNameStyle"
        android:layout_marginStart="@dimen/line_station_margin_start"
        android:layout_marginEnd="@dimen/line_station_margin_end"
        android:padding="@dimen/widget_list_pad"
        tools:text="@string/towards_text" />

</LinearLayout>