<?xml version="1.0" encoding="utf-8"?>
<!--
  ~  Copyright 2020 Anastasia Annin
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~ http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  ~
-->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:id="@+id/overground_list">

    <TextView
        android:id="@+id/overground_name"
        style="@style/LineStationListStyle"
        android:layout_marginStart="@dimen/line_station_margin_start"
        android:layout_marginEnd="@dimen/line_station_margin_end"
        android:layout_marginTop="@dimen/main_name_top"
        android:padding="@dimen/line_list_padding"
        android:textSize="@dimen/line_name_text_size"
        tools:text="@string/line_name" />

    <TextView
        android:id="@+id/overground_status_name"
        style="@style/LineStationStatusStyle"
        android:layout_marginStart="@dimen/line_station_reason_margin_start"
        android:layout_marginEnd="@dimen/line_station_margin_end"
        android:padding="@dimen/line_list_padding"
        android:textSize="@dimen/line_status_text_size"
        tools:text="@string/line_status_text" />

    <TextView
        android:id="@+id/overground_status_reason"
        style="@style/LineStationStatusReasonStyle"
        android:layout_marginStart="@dimen/line_station_reason_margin_start"
        android:layout_marginEnd="@dimen/line_station_margin_end"
        android:padding="@dimen/line_status_reason_padding"
        android:textSize="@dimen/line_status_text_size"
        tools:text="@string/line_reason_text" />

</LinearLayout>